[package]
name = "b-tree"
version = "0.2.0"
authors = ["Parsa MirSaeed <parsa.mirsaeed@gmail.com>"]
edition = "2021"

[dependencies]
# Dioxus 0.7.1 with the web feature enabled
dioxus = { version = "0.7.1", features = ["web"] }

# Logging utilities for the browser console
dioxus-logger = "0.5"
log = "0.4"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
